# video-insight-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DATABASE.md  IMPROVE-SUMMARIZER-RESULTS.md  PLAN-TRANSCRIPT-STORAGE.md  PROGRESSIVE-SUMMARIZATION-PLAN.md  README-old.md  README.md  dev-tool-plan.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json  vie-summarizer-updates.md
services/admin/: Dockerfile  conftest.py  pyproject.toml  requirements.txt
services/admin/src/: auth.py  config.py  dependencies.py  main.py
services/admin/src/routes/: _helpers.py  alerts.py  health.py  shares.py  tiers.py  usage.py
services/admin/src/services/: aggregator.py  health_checker.py
services/admin/static/: index.html
services/admin/static/assets/: index-B4RyIuJx.css  index-B5zLr4nb.js  index-BqE103Fz.css  index-BrtPj6yb.js  index-CF3VD5u3.css  index-Ddqmz4kj.js
services/admin/tests/: test_aggregator_validation.py  test_auth.py  test_auth_security.py  test_shares.py  test_tiers.py  test_usage_helpers.py  test_usage_output_type.py  test_usage_validation.py
services/admin/ui/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
services/admin/ui/e2e/: alerts.spec.ts  auth.spec.ts  dashboard.spec.ts  fixtures.ts  health.spec.ts  layout.spec.ts  mock-data.ts  usage.spec.ts  videos.spec.ts
services/admin/ui/src/: App.test.tsx  App.tsx  index.css  main.test.tsx
services/admin/ui/test-results/: .last-run.json
services/explainer/: Dockerfile  pyproject.toml  requirements.txt
services/explainer/src/: __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py  schemas.py  server.py
services/explainer/src/prompts/: chat_system.txt  explain_concept.txt  explain_section.txt  video_chat_system.txt
services/explainer/src/repositories/: __init__.py  base.py  mongodb_repository.py
services/explainer/src/services/: __init__.py  llm.py  llm_provider.py  mongodb.py  usage_tracker.py
services/explainer/src/tools/: __init__.py  chat_utils.py  explain_auto.py  explain_chat.py  explain_chat_stream.py  video_chat.py
services/explainer/src/utils/: __init__.py  content_extractor.py  output_type.py
services/explainer/tests/: __init__.py  conftest.py  test_explain_auto.py  test_explain_chat.py  test_llm_service.py  test_mongodb.py  test_output_type.py  test_repositories.py  test_video_chat.py
services/summarizer/: Dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt
services/summarizer/scripts/: backfill-transcripts.py
services/summarizer/src/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py
services/summarizer/src/models/: domain_types.py  output_types.py  pipeline_types.py  schemas.py
services/summarizer/src/prompts/: accuracy_rules.txt  base_extraction.txt  chapter_detect.txt  chapter_facts.txt  chapter_summary.txt  chapter_validate.txt  concept_extract.txt  description_analysis.txt  enrich_code.txt  enrich_study.txt  extract_code.txt  extract_highlights.txt  extract_music.txt  extract_project.txt  extract_recipe.txt  extract_smart.txt  extract_study.txt  extract_trip.txt  extract_verdict.txt  extract_workout.txt  global_synthesis.txt  intent_detect.txt  manifest.txt  master_summary.txt  metadata_tldr.txt  persona_system.txt  quick_synthesis.txt  section_detect.txt  section_summary.txt  synthesis.txt  triage.txt
services/summarizer/src/repositories/: __init__.py  base.py  mongodb_repository.py
services/summarizer/src/routes/: __init__.py  override.py  stream.py
services/summarizer/src/services/: accuracy.py  block_postprocessing.py  chapter_pipeline.py  concept_processing.py  cross_chapter_consolidation.py  llm.py  (+24 more)
services/summarizer/tests/: __init__.py  conftest.py  test_accuracy.py  test_block_diversity.py  test_block_quality_v3.py  test_chapter_detection.py  test_concept_processing.py  test_consolidation.py  test_description_analyzer.py  test_domain_types.py  test_enrichment.py  test_extractor.py  test_frame_extractor.py  test_gemini_transcriber.py  test_image_dedup.py  test_intent_detector.py  test_json_parsing.py  test_llm_provider.py  test_llm_service.py  test_manifest.py  test_output_type.py  test_output_types_validation.py  test_override.py  test_pipeline_helpers.py  test_pipeline_integration.py  test_playlist_service.py  test_post_processor.py  test_prompt_builder.py  test_prompt_builders.py  test_refresh_frame_urls.py  test_s3_client.py  test_sponsorblock.py  test_status_callback.py  test_stream_routes.py  test_summarizer_service.py  test_synthesis.py  test_transcript_service.py  test_transcript_slicer.py  test_transcript_store.py  test_triage.py  (+2 more)
(+967 files in other folders)
