[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vie-admin"
version = "0.1.0"
description = "VIE Admin Panel — LLM Usage Monitoring & System Health"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.27.0",
    "motor>=3.3.0",
    "httpx>=0.26.0",
    "cachetools>=5.3.0",
    "structlog>=24.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
